--- a/advanced_python/macros.tex
+++ b/advanced_python/macros.tex
@@ -41,8 +41,9 @@
 
 \newcommand{\typ}[1]{\textbf{\texttt{{#1}}}}
 
-
 \newcommand{\kwrd}[1]{ \texttt{\textbf{\color{blue}{#1}}}  }
+
+\newcommand{\py}[1]{\lstinline{#1}}
 
 %%% This is from Fernando's setup.
 % \usepackage{color}
