Remove references to lena and use image of penguins.

--- a/scipy/basic/03_ipython_plotting.tex
+++ b/scipy/basic/03_ipython_plotting.tex
@@ -147,7 +147,7 @@ Python}
       \end{itemize}
     \item Images
       \begin{itemize}
-      \item \typ{lena.png}
+      \item \typ{penguins.png}
       \end{itemize}
   \end{enumerate}
 \end{frame}
