--- a/scipy/basic/quickref.tex
+++ b/scipy/basic/quickref.tex
@@ -278,7 +278,7 @@ def f(y, t):
 \hr\textbf{Basic image processing}
 
 {\ex \typ{from pylab import imread, imshow, colorbar}}\\
-{\ex \typ{a = imread('lena.png')}}: a is a NumPy array\\
+{\ex \typ{a = imread('penguins.png')}}: a is a NumPy array\\
 {\ex \typ{imshow(a)}}\\
 {\ex \typ{colorbar()}}\\
 
