Fix some minor errors.

--- a/advanced_python/14_oop_multiple_inheritance.tex
+++ b/advanced_python/14_oop_multiple_inheritance.tex
@@ -131,7 +131,7 @@ Base
   \begin{lstlisting}
 class C1(B, A):
     def __init__(self):
-        print('C')
+        print('C1')
         super().__init__()
 
 In []: c1 = C1()
