Reorganize the pytest slides.

--- a/testing/macros.tex
+++ b/testing/macros.tex
@@ -2,9 +2,9 @@
 % Modified from: generic-ornate-15min-45min.de.tex
 \mode<presentation>
 {
-  \usetheme{Warsaw}
+  \usetheme{Madrid}
   \useoutertheme{infolines}
-  \setbeamercovered{transparent}
+  \setbeamercovered{invisible}
 }
 
 \usepackage[english]{babel}
@@ -41,8 +41,9 @@
 
 \newcommand{\typ}[1]{\textbf{\texttt{{#1}}}}
 
-
 \newcommand{\kwrd}[1]{ \texttt{\textbf{\color{blue}{#1}}}  }
+
+\newcommand{\py}[1]{\lstinline{#1}}
 
 %%% This is from Fernando's setup.
 % \usepackage{color}
