Remove/Edit references to Canopy in advanced_python/01_intro.tex and scipy/basic/02_prelims.tex

--- a/scipy/basic/02_prelims.tex
+++ b/scipy/basic/02_prelims.tex
@@ -207,18 +207,6 @@ $
 \end{frame}
 
 \begin{frame}
-  \frametitle{Python distribution: Canopy}
-  \begin{itemize}
-  \item \url{www.enthought.com/products/canopy}
-  \item Easy to use
-  \item Simple IDE
-  \item Cross platform: Linux, OSX, Windows
-  \item Free installer
-  \item Many packages
-  \end{itemize}
-\end{frame}
-
-\begin{frame}
   \frametitle{Python distribution: Anaconda}
   \begin{itemize}
   \item \url{www.continuum.io/downloads}
@@ -231,9 +219,9 @@ $
 \begin{frame}[plain]
   \frametitle{For this course}
   \begin{itemize}
-  \item Using Canopy
-  \item Simple UI
+  \item Using Anaconda
   \item Easy for beginners
+  \item Pre-installed with relevant packages
     \vspace*{0.25in}
   \item Advanced users can use anything they want!
   \end{itemize}
@@ -244,7 +232,7 @@ $
   \begin{itemize}
     \item Download for your platform
     \item Install it
-    \item Start Canopy
+    \item Start Anaconda
   \end{itemize}
 \end{frame}
 
