Add Anaconda section to Prelims slides and edit Running Python Scripts in Canopy to reflect changes - Anaconda and VSCode

--- a/scipy/basic/04_saving_scripts.tex
+++ b/scipy/basic/04_saving_scripts.tex
@@ -201,7 +201,7 @@ Saves from history the commands entered on line numbers \alert{16, 18, 19, 20, \
   \item Save lines relevant for the review problem
   \item Hint: example\\ \typ{\%save four_plot.py 16 18-27}
   \item Choose the lines carefully
-  \item Edit \typ{four_plot.py} on Canopy
+  \item Edit \typ{four_plot.py} on VSCode
   \item Make sure all the lines are correct
   \item Save the script
   \end{itemize}
@@ -211,7 +211,7 @@ Saves from history the commands entered on line numbers \alert{16, 18, 19, 20, \
 \begin{frame}[fragile]
   \frametitle{Creating scripts: alternative}
   \begin{itemize}
-  \item Create a new file on Canopy
+  \item Create a new file on VSCode
   \item Copy commands for assignment with your mouse
   \item Save the script to \typ{four_plot.py}
   \end{itemize}
@@ -269,7 +269,7 @@ In []: show()
 \begin{frame}[fragile]
   \frametitle{Running with Python}
   \begin{itemize}
-  \item Start a new Canopy terminal
+  \item Start a new IPython terminal
   \item Change directory to where you saved \typ{four_plot.py}
   \item Run the script as:
   \end{itemize}
@@ -315,7 +315,7 @@ plot(x, x, 'b')
 \begin{frame}[fragile]
   \frametitle{Try again}
   \begin{itemize}
-  \item On Canopy terminal
+  \item On IPython terminal
   \item Run the script as:
   \end{itemize}
 \begin{lstlisting}
@@ -388,7 +388,7 @@ show()
 \end{frame}
 
 \begin{frame}
-  \frametitle{Using Canopy}
+  \frametitle{Using VSCode and Anaconda}
   \begin{itemize}
   \item Much easier
   \item Write code in the editor
