--- a/scipy/basic/03_ipython_plotting.tex
+++ b/scipy/basic/03_ipython_plotting.tex
@@ -138,7 +138,7 @@ Python}
 \begin{frame}
 \frametitle{Checklist}
   \begin{enumerate}
-    \item Editor - we recommend \alert{Canopy}
+    \item Editor - we recommend \alert{VSCode}
     \item IPython
     \item Data files:
       \begin{itemize}
@@ -193,7 +193,7 @@ Python}
 \frametitle{Starting up \ldots}
 \begin{block}{Start a terminal}
   \begin{itemize}
-    \item Canopy command prompt (Tools menu)
+    \item Open Terminal using Anaconda Navigator
 \end{itemize}
 \end{block}
 
@@ -269,7 +269,7 @@ Breaking out of loops
   \begin{itemize}
   \item Exit the IPython interpreter
   \item Close the terminal
-  \item Restart the terminal (Canopy tools menu)
+  \item Restart the terminal
   \item Restart IPython using:
   \end{itemize}
 \begin{lstlisting}
