Remove references to VSCode and replace with Spyder

--- a/scipy/basic/02a_anaconda.tex
+++ b/scipy/basic/02a_anaconda.tex
@@ -162,11 +162,9 @@ Python}
 \end{frame}
 
 \begin{frame}[plain]
-  \frametitle{Setup VSCode}
+  \frametitle{Launch Spyder IDE}
   \begin{itemize}
-    \item Download the installer for your platform
-    \item Install it
-    \item Start VSCode
+    \item Start Spyder IDE from the Anaconda GUI
   \end{itemize}
 \end{frame}
 
