--- a/scipy/basic/03_ipython_plotting.tex
+++ b/scipy/basic/03_ipython_plotting.tex
@@ -138,7 +138,7 @@ Python}
 \begin{frame}
 \frametitle{Checklist}
   \begin{enumerate}
-    \item Editor - we recommend \alert{VSCode}
+    \item Editor - we recommend \alert{Spyder}
     \item IPython
     \item Data files:
       \begin{itemize}
