--- a/scipy/basic/04_saving_scripts.tex
+++ b/scipy/basic/04_saving_scripts.tex
@@ -201,7 +201,7 @@ Saves from history the commands entered on line numbers \alert{16, 18, 19, 20, \
   \item Save lines relevant for the review problem
   \item Hint: example\\ \typ{\%save four_plot.py 16 18-27}
   \item Choose the lines carefully
-  \item Edit \typ{four_plot.py} on VSCode
+  \item Edit \typ{four_plot.py} on Spyder
   \item Make sure all the lines are correct
   \item Save the script
   \end{itemize}
@@ -211,7 +211,7 @@ Saves from history the commands entered on line numbers \alert{16, 18, 19, 20, \
 \begin{frame}[fragile]
   \frametitle{Creating scripts: alternative}
   \begin{itemize}
-  \item Create a new file on VSCode
+  \item Create a new file on Spyder
   \item Copy commands for assignment with your mouse
   \item Save the script to \typ{four_plot.py}
   \end{itemize}
@@ -388,13 +388,13 @@ show()
 \end{frame}
 
 \begin{frame}
-  \frametitle{Using VSCode and Anaconda}
+  \frametitle{Using Spyder and Anaconda}
   \begin{itemize}
   \item Much easier
   \item Write code in the editor
-  \item Embedded IPython
+  \item Embedded IPython Console
   \item Save (Ctrl-S or Cmd-S)
-  \item Run selection: Ctrl-Shift-R (Cmd-Shift-R on OS X)
+  \item Run selection: F9
   \item Run code: Ctrl-R (Cmd-R on OS X)
   \item Change directory with menu (\typ{\%cd})
   \end{itemize}
