Add reference to EDM, Add reference to Spyder, Fix terminal references

--- a/advanced_python/01_intro.tex
+++ b/advanced_python/01_intro.tex
@@ -41,6 +41,7 @@
   \item Any Python environment works
     \begin{itemize}
     \item Conda/Anaconda
+    \item Enthought Deployment Manager (EDM)
     \item Standard Python
     \end{itemize}
   \item IPython
