--- a/scipy/basic/04_saving_scripts.tex
+++ b/scipy/basic/04_saving_scripts.tex
@@ -269,7 +269,7 @@ In []: show()
 \begin{frame}[fragile]
   \frametitle{Running with Python}
   \begin{itemize}
-  \item Start a new IPython terminal
+  \item Start a new terminal
   \item Change directory to where you saved \typ{four_plot.py}
   \item Run the script as:
   \end{itemize}
@@ -315,7 +315,7 @@ plot(x, x, 'b')
 \begin{frame}[fragile]
   \frametitle{Try again}
   \begin{itemize}
-  \item On IPython terminal
+  \item On terminal
   \item Run the script as:
   \end{itemize}
 \begin{lstlisting}
