Some updates to initial slides.

--- a/scipy/basic/02_prelims.tex
+++ b/scipy/basic/02_prelims.tex
@@ -144,10 +144,11 @@ Python}
 
 \begin{frame}[fragile]
   \frametitle{The interpreter}
-  \small
+  \footnotesize
   \begin{lstlisting}
 $ python
-Python 2.7.9 (default, Feb 10 2015, 03:29:10)
+Python 3.8.6 | packaged by conda-forge | (default, ...)
+[Clang 11.0.1 ] on darwin
 Type "help", "copyright", "credits" or "license" for more information.
 >>>
 \end{lstlisting} %$
@@ -182,6 +183,7 @@ $
   \item \typ{matplotlib}
   \item \typ{PyQt}
   \item \typ{django}
+  \item \typ{PyTorch}, \typ{TensorFlow}
   \item \typ{mayavi}
   \item About 1 lakh packages!
   \end{itemize}
