--- a/scipy/basic/02a_anaconda.tex
+++ b/scipy/basic/02a_anaconda.tex
@@ -162,11 +162,66 @@ Python}
 \end{frame}
 
 \begin{frame}[plain]
-  \frametitle{Launch Spyder IDE}
+  \frametitle{Launch/configure Spyder IDE}
   \begin{itemize}
-    \item Start Spyder IDE from the Anaconda GUI
+  \item Start Spyder IDE from the Anaconda GUI
+  \item Configure it for the course
+  \item Preferences / IPython console / Graphics
+    \begin{itemize}
+    \item Auto-load pylab/numpy
+    \item Graphics backend: qt5
+    \item Hit Apply/OK
+    \item Restart the editor
+    \end{itemize}
   \end{itemize}
 \end{frame}
 
+\begin{frame}[plain]
+  \frametitle{Some basics}
+  \begin{itemize}
+  \item Hardware
+  \item Operating system (or OS)
+  \item Programs
+  \item Processes
+  \item Memory
+  \item Communication (I/O, network, etc.)
+  \end{itemize}
+\end{frame}
+
+\begin{frame}[plain]
+  \frametitle{Some terminology}
+  \begin{itemize}
+  \item Terminal/console/command line: a program
+    \vspace*{0.2in}
+  \item Command Line Interface: CLI
+  \item Graphical User Interface: GUI
+    \vspace*{0.2in}
+  \item Shell: exposes a CLI to the OS
+  \item REPL: Read-Eval-Print Loop
+    \vspace*{0.2in}
+  \item Text-editor: Spyder, VSCode, Emacs, Vim
+  \item IDE: Integrated Development Environment
+  \item Some text editors are also IDEs
+  \end{itemize}
+\end{frame}
+
+
+\begin{frame}[plain]
+  \frametitle{Using the terminal}
+  \begin{itemize}
+  \item Learning about the terminal
+  \item Launch the anaconda terminal
+  \item Execute Python programs there
+  \end{itemize}
+\end{frame}
+
+\begin{frame}[plain]
+  \frametitle{Summary}
+  \begin{itemize}
+  \item Using anaconda and Spyder
+  \item Launching a terminal
+  \item Some basics and terminology
+  \end{itemize}
+\end{frame}
 
 \end{document}
