--- a/scipy/basic/03_ipython_plotting.tex
+++ b/scipy/basic/03_ipython_plotting.tex
@@ -153,7 +153,7 @@ Python}
 \end{frame}
 
 \begin{frame}
-  \frametitle{About the Tutorial}
+  \frametitle{About the material}
   \begin{block}{Intended Audience}
   \begin{itemize}
        \item Engg., Mathematics and Science researchers with a
@@ -463,6 +463,9 @@ In []: legend(['sin(2y)'], loc='center')
 'best'
 'right'
 'center'
+'upper right'
+'lower right'
+'center right'
 \end{lstlisting}
 \end{columns}
 \inctime{15}
