Some minor changes.

--- a/scipy/basic/03_ipython_plotting.tex
+++ b/scipy/basic/03_ipython_plotting.tex
@@ -130,7 +130,7 @@ Python}
         \alert{IIT Bombay}\\
         and funded by\\
         The National Mission on Education through ICT, \\
-        \alert{Ministry of HRD, India}
+        \alert{Ministry of Education, India}
     \end{center}
 \end{frame}
 
@@ -193,7 +193,8 @@ Python}
 \frametitle{Starting up \ldots}
 \begin{block}{Start a terminal}
   \begin{itemize}
-    \item Open Terminal using Anaconda Navigator
+  \item Open Terminal with Anaconda Navigator
+  \item Or any other approach
 \end{itemize}
 \end{block}
 
@@ -235,6 +236,7 @@ Exiting on the \textbf{terminal}
   \frametitle{IPython? }
   \begin{itemize}
   \item An enhanced Python interpreter
+  \item Provides many conveniences
   \end{itemize}
 \end{frame}
 
