Several minor changes to update content.

--- a/scipy/basic/03_ipython_plotting.tex
+++ b/scipy/basic/03_ipython_plotting.tex
@@ -193,8 +193,8 @@ Python}
 \frametitle{Starting up \ldots}
 \begin{block}{Start a terminal}
   \begin{itemize}
-  \item Open Terminal with Anaconda Navigator
-  \item Or any other approach
+  \item Using Anaconda Navigator
+  \item Or another approach
 \end{itemize}
 \end{block}
 
