--- a/scipy/basic/11_notebook.tex
+++ b/scipy/basic/11_notebook.tex
@@ -158,11 +158,12 @@ Mumbai, India
     \end{itemize}
   \item Powerful and convenient
   \item Must be installed as a package
+  \item Part of anaconda
   \end{itemize}
 \end{frame}
 
 \begin{frame}
-  \frametitle{IPython notebook}
+  \frametitle{Jupyter notebooks}
   \begin{itemize}
   \item Create and share documents containing
     \begin{itemize}
@@ -213,9 +214,9 @@ Console
 $ ipython
 \end{lstlisting} %$
 \vspace*{0.25in}
-The notebook:
+Or perhaps:
   \begin{lstlisting}
-$ ipython notebook
+$ ipython --pylab
 \end{lstlisting} %$
 \end{frame}
 
@@ -232,10 +233,11 @@ $ jupyter notebook
 \end{frame}
 
 \begin{frame}[fragile]
-  \frametitle{IPython notebooks and Canopy}
+  \frametitle{Jupyter notebooks and Anaconda}
   \begin{itemize}
-  \item Can directly open \typ{*.ipynb} files from Canopy
-  \item Or create a new notebook using the File menu
+  \item On the terminal
+  \item On the navigator
+  \item Via the menu
   \end{itemize}
 \end{frame}
 
@@ -269,20 +271,19 @@ In []: plt.plot(x, sin(x))
   \item \typ{\%pylab}: imports pylab
   \item \typ{\%matplotlib}: just sets up the plotting, no imports
   \item Using explicit imports is cleaner
-  \item \typ{pyplot} provides the useful functionality
+  \item \typ{pyplot} provides the functionality
   \item Could also just import \typ{pylab}
   \end{itemize}
 \end{frame}
 
 \begin{frame}[fragile]
-  \frametitle{Using the IPython notebook}
+  \frametitle{Using Jupyter notebooks}
 
   \begin{itemize}
   \item Start the notebook
   \item Try:
     \typ{jupyter notebook}
-  \item If that doesn't work use \typ{ipython notebook}
-  \item Create a new Python 2 or Python 3 notebook
+  \item Create a new Python 3 notebook
   \end{itemize}
 \end{frame}
 
