--- a/scipy/basic/circulate/sample.ipynb
+++ b/scipy/basic/circulate/sample.ipynb
@@ -166,7 +166,9 @@
     }
    ],
    "source": [
-    "%pylab inline\n"
+    "%pylab inline\n",
+    "# Also try\n",
+    "# %pylab notebook"
    ]
   },
   {
