Add blank slide to retain slide numbers.

--- a/scipy/basic/06_numpy.tex
+++ b/scipy/basic/06_numpy.tex
@@ -209,6 +209,9 @@ Out[]: array([0, 0, 0, 0])
 \end{frame}
 
 \begin{frame}[fragile]
+\end{frame}
+
+\begin{frame}[fragile]
   \frametitle{Examples}
 \noindent \typ{pi} and \typ{e} are defined.
 \begin{lstlisting}
